Closed Bug 1257350 Opened 8 years ago Closed 8 years ago

accessible/xul/XULTreeAccessible.cpp(532): warning C4312: 'reinterpret_cast': conversion from 'int32_t' to 'void *' of greater size

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla48
Tracking Status
firefox48 --- fixed

People

(Reporter: gps, Assigned: gps)

References

Details

Attachments

(1 file, 1 obsolete file)

We're unmasking some compiler warnings in bug 1124033 and a few warnings in XULTreeAccessible.cpp are converted to errors when building with VS2015 in automation.

 15:08:17     INFO -  Unified_cpp_accessible_xul0.cpp
 15:08:17     INFO -  c:/builds/moz2_slave/try-w64-d-00000000000000000000/build/src/accessible/xul/XULTreeAccessible.cpp(532): error C2220: warning treated as error - no 'object' file generated
 15:08:17     INFO -  Warning: C4312 in c:\builds\moz2_slave\try-w64-d-00000000000000000000\build\src\accessible\xul\XULTreeAccessible.cpp: 'reinterpret_cast': conversion from 'int32_t' to 'void *' of greater size
 15:08:17     INFO -  c:/builds/moz2_slave/try-w64-d-00000000000000000000/build/src/accessible/xul/XULTreeAccessible.cpp(532): warning C4312: 'reinterpret_cast': conversion from 'int32_t' to 'void *' of greater size
 15:08:17     INFO -  Warning: C4312 in c:\builds\moz2_slave\try-w64-d-00000000000000000000\build\src\accessible\xul\XULTreeAccessible.cpp: 'reinterpret_cast': conversion from 'int32_t' to 'void *' of greater size
 15:08:17     INFO -  c:/builds/moz2_slave/try-w64-d-00000000000000000000/build/src/accessible/xul/XULTreeAccessible.cpp(567): warning C4312: 'reinterpret_cast': conversion from 'int32_t' to 'void *' of greater size
 15:08:17     INFO -  Warning: C4312 in c:\builds\moz2_slave\try-w64-d-00000000000000000000\build\src\accessible\xul\XULTreeAccessible.cpp: 'reinterpret_cast': conversion from 'int32_t' to 'void *' of greater size
 15:08:17     INFO -  c:/builds/moz2_slave/try-w64-d-00000000000000000000/build/src/accessible/xul/XULTreeAccessible.cpp(593): warning C4312: 'reinterpret_cast': conversion from 'int32_t' to 'void *' of greater size
 15:08:17     INFO -  Warning: C4312 in c:\builds\moz2_slave\try-w64-d-00000000000000000000\build\src\accessible\xul\XULTreeAccessible.cpp: 'reinterpret_cast': conversion from 'int32_t' to 'void *' of greater size
 15:08:17     INFO -  c:/builds/moz2_slave/try-w64-d-00000000000000000000/build/src/accessible/xul/XULTreeAccessible.cpp(646): warning C4312: 'reinterpret_cast': conversion from 'int32_t' to 'void *' of greater size
15:08:17 INFO - c:/builds/moz2_slave/try-w64-d-00000000000000000000/build/src/config/rules.mk:918: recipe for target 'Unified_cpp_accessible_xul0.obj' failed
As part of unblocking building with VS2015u1 in automation, I'm mass
disabling compiler warnings that are turned into errors. This is not
the preferred mechanism to fix compilation warnings. So hopefully
this patch never lands because someone insists on fixing the underlying
problem instead. But if it does land, hopefully the workaround is
only temporary.

Review commit: https://reviewboard.mozilla.org/r/40619/diff/#index_header
See other reviews: https://reviewboard.mozilla.org/r/40619/
Attachment #8731464 - Flags: review?(tbsaunde+mozbugs)
Comment on attachment 8731464 [details]
MozReview Request: Bug 1257350 - Disable C4312 to unblock compilation on VS2015; r?tbsaunde

same story as bug 1257303.  you could ask why this hash map uses void* as the key type, but I don't think cleaning that up is necessary.
Attachment #8731464 - Flags: review?(tbsaunde+mozbugs) → review-
Without this, we get several warnings like:

reinterpret_cast': conversion from 'int32_t' to 'void *' of
greater size

Review commit: https://reviewboard.mozilla.org/r/42113/diff/#index_header
See other reviews: https://reviewboard.mozilla.org/r/42113/
Attachment #8734151 - Flags: review?(tbsaunde+mozbugs)
Attachment #8731464 - Attachment is obsolete: true
Attachment #8734151 - Attachment description: MozReview Request: Bug 1257350 - Use intptr_t to avoid C4313 on VS2015; r?tbsaunde → MozReview Request: Bug 1257350 - Use intptr_t to avoid C4312 on VS2015; r?tbsaunde
Comment on attachment 8734151 [details]
MozReview Request: Bug 1257350 - Use intptr_t to avoid C4312 on VS2015; r?tbsaunde

Review request updated; see interdiff: https://reviewboard.mozilla.org/r/42113/diff/1-2/
Assignee: nobody → gps
Status: NEW → ASSIGNED
Comment on attachment 8734151 [details]
MozReview Request: Bug 1257350 - Use intptr_t to avoid C4312 on VS2015; r?tbsaunde

tbsaunde reviewed over IRC.
Attachment #8734151 - Flags: review?(tbsaunde+mozbugs) → review+
https://hg.mozilla.org/mozilla-central/rev/52a994f0744c
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
You need to log in before you can comment on or make changes to this bug.