Bug 1257350 - Use intptr_t to avoid C4312 on VS2015; r=tbsaunde

Without this, we get several warnings like:

reinterpret_cast': conversion from 'int32_t' to 'void *' of
greater size

MozReview-Commit-ID: sy2eTB2fjs